--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "forever": "0.15.1",
     "json-loader": "0.5.4",
     "just-wait": "1.0.5",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^3.1.2",
     "webpack": "1.12.14",
     "webpack-dev-server": "1.14.1",
     "webpack-node-externals": "1.0.0"
