--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "react-router": "2.0.0",
     "react-transmit": "3.1.7",
     "sass-loader": "3.1.2",
-    "style-loader": "0.13.0"
-  
+    "style-loader": "0.13.0",
     "babel": "6.5.2",
     "babel-core": "6.6.5",
     "babel-loader": "6.2.4",
